# ruuidgen

./: .rustfmt.toml  Cargo.toml  README.md
src/: main.rs
