[package]
name = "ruuidgen"
version = "0.9.0"
authors = ["Irisawa Masaru <irisawa.masaru@gmail.com>"]
edition = "2018"
license = "MIT"
description = "uuid generator"
repository = "https://github.com/mass10/ruuidgen/"
documentation = "https://docs.rs/crate/ruuidgen/"
categories = ["command-line-utilities"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "^0.8", features = ["v4"] }
